# essd-ingest-pipeline

./: .pre-commit-config.yaml  .thoth.yaml  Pipfile  README.md  pyproject.toml
dbt/essd_transform/: README.md  dbt_project.yml
dbt/essd_transform/models/: ch4_gwp.sql  essd_ch4_gwp.sql  essd_ghg_data.sql  essd_gwp100_data.sql  essd_gwp_100yr.sql  essd_lulucf.sql  essd_regions.sql  essd_schema.yml  essd_sectors.sql  ghg_data.sql  gwp100_data.sql  gwp_100yr.sql  lulucf.sql  regions.sql  sectors.sql
manifests/: wftmpl.yaml
notebooks/: osc-essd-00-init.ipynb  osc-essd-01-extract.ipynb  osc-essd-02-load.ipynb  osc-essd-ingest.ipynb  requirements.txt
