[project]
name = "essd-ingest-pipeline"
version = "v0.1.0"
description = "Ingestion pipeline for Earth System Science Data (ESSD)"
authors = [
  { name = "Michael Tiemann", email = "72577720+MichaelTiemannOSC@users.noreply.github.com" },
]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["Climate", "essd-ingest-pipeline", "Finance"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

dependencies = [
  "anytree==2.12.1",
  "arrow==1.3.0",
  "betterproto==1.2.5",
  "boto3==1.34.74",
  "boto3-stubs-lite==1.34.74",
  "botocore==1.34.74",
  "botocore-stubs==1.34.69",
  "dash==2.16.1",
  "dash-bootstrap-components==1.6.0",
  "dash-core-components==2.0.0",
  "dash-html-components==2.0.0",
  "dash-table==5.0.0",
  "dbt-core>=1.4.9",
  "dbt-extractor==0.4.1",
  "dbt-semantic-interfaces==0.4.4",
  "dbt-trino==1.4.2",
  "fastparquet==2024.2.0",
  "Flask",
  "globalwarmingpotentials==0.9.4",
  "grpcio==1.62.2",
  "grpcio-health-checking==1.48.2",
  "grpclib==0.4.7",
  "iam-units==2023.9.12",
  "jupyter_client==8.6.0",
  "jupyter_core==5.5.0",
  "jupyter-events==0.9.0",
  "jupyter-lsp==2.2.2",
  "jupyter_server==2.11.2",
  "jupyter_server_terminals==0.4.4",
  "jupyterlab==4.1.6",
  "jupyterlab_pygments==0.3.0",
  "jupyterlab_server==2.25.2",
  "kaleido==0.2.1",
  "MarkupSafe==2.1.5",
  "mashumaro==3.3.1",
  "matplotlib==3.8.4",
  "matplotlib-inline==0.1.6",
  "multidict==6.0.5",
  "multiprocess==0.70.16",
  "mypy==1.8.0",
  "mypy-boto3-s3==1.34.65",
  "mypy-extensions==1.0.0",
  "nbclient==0.9.0",
  "nbconvert==7.11.0",
  "nbformat==5.9.2",
  "nodejs==0.1.1",
  "numexpr==2.9.0",
  "numpy==1.26.2",
  "openpyxl==3.1.2",
  "openscm-units==0.5.2",
  "osc-ingest-tools>=0.5.2",
  "pandas==2.2.1",
  "pandas-stubs==2.2.1.240316",
  "Pint==0.23",
  "Pint-Pandas==0.5",
  "plotly==5.21.0",
  "pre-commit==3.7.0",
  "protobuf==3.20.3",
  "pyarrow==16.0.0",
  "pydantic==2.7.1",
  "pydantic_core==2.18.2",
  "pytest==8.1.1",
  "pytest-cov==5.0.0",
  "pytest-mock==3.14.0",
  "python-dateutil==2.8.2",
  "python-dotenv==1.0.0",
  "python-json-logger==2.0.7",
  "python-pachyderm==7.6.0",
  "python-slugify==8.0.4",
  "requests==2.31.0",
  "requests-toolbelt==1.0.0",
  "s3transfer==0.10.1",
  "setuptools==69.2.0",
  "SQLAlchemy==2.0.29",
  "trino==0.328.0",
  "uncertainties==3.1.7",
  "Werkzeug",
  "wheel==0.43.0",
  "ydata-profiling==4.7.0"
]

[tool.setuptools.package-data]
essd-ingest-pipeline = [
      "py.typed"
      ]

[project.urls]
Homepage = "https://github.com/os-climate/essd-ingest-pipeline"
Repository = "https://github.com/os-climate/essd-ingest-pipeline"
Downloads = "https://github.com/os-climate/essd-ingest-pipeline/releases"
"Bug Tracker" = "https://github.com/os-climate/essd-ingest-pipeline/issues"
Documentation = "https://github.com/os-climate/essd-ingest-pipeline/tree/main/docs"
"Source Code" = "https://github.com/os-climate/essd-ingest-pipeline"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
docs = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = ["pdm[pytest]", "pytest-cov"]
tox = ["tox", "tox-pdm>=0.5"]
docs = ["sphinx", "sphinx-copybutton>=0.5.2"]
dev = [
    "tox>=4.11.3",
    "tox-pdm>=0.7.0",
    "flake8",
    "coverage",
    "Sphinx",
    "alabaster",
    "babel",
    "certifi",
    "charset-normalizer",
    "coverage",
    "docutils",
    "flake8",
    "idna",
    "imagesize",
    "jinja2>=3.1.2",
    "markupsafe",
    "mccabe",
    "packaging",
    "pycodestyle",
    "pyflakes",
    "pygments",
    "pyparsing",
    "pytz",
    "requests",
    "snowballstemmer",
    "sphinx",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "urllib3"
]
lint = [
    "pre-commit"
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pytest.ini_options]
testpaths = [
    "test/",
]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 70"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "120"
extend-ignore = [
  "E501",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["test/*"]
# relative_files = true
